localization/v2.4.x/site/it/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: Questa pagina fornisce un elenco di tutorial per interagire con Milvus.
title: Panoramica dei tutorial
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Panoramica dei tutorial<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Questa pagina contiene un elenco di esercitazioni per interagire con Milvus.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Caso d'uso</th><th>Funzioni Milvus correlate</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/it/v2.4.x/build-rag-with-milvus.md">Costruire RAG con Milvus</a></td><td>RAG</td><td>Ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/how_to_enhance_your_rag.md">RAG avanzato</a></td><td>RAG</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/full_text_search_with_milvus.md">Ricerca full text con Milvus</a></td><td>Avvio rapido</td><td>Ricerca a tutto testo</td></tr>
<tr><td><a href="/docs/it/v2.4.x/hybrid_search_with_milvus.md">Ricerca ibrida con Milvus</a></td><td>Ricerca ibrida</td><td>ricerca ibrida, multi vettoriale, incorporazione densa, incorporazione rada</td></tr>
<tr><td><a href="/docs/it/v2.4.x/image_similarity_search.md">Ricerca per immagini con Milvus</a></td><td>Ricerca semantica</td><td>ricerca vettoriale, campo dinamico</td></tr>
<tr><td><a href="/docs/it/v2.4.x/multimodal_rag_with_milvus.md">RAG multimodale con Milvus</a></td><td>RAG</td><td>ricerca vettoriale, campo dinamico</td></tr>
<tr><td><a href="/docs/it/v2.4.x/multimodal_rag_with_milvus.md">Ricerca multimodale con vettori multipli</a></td><td>Ricerca semantica</td><td>multi vettoriale, ricerca ibrida</td></tr>
<tr><td><a href="/docs/it/v2.4.x/graph_rag_with_milvus.md">RAG grafico con Milvus</a></td><td>RAG</td><td>ricerca a grafo</td></tr>
<tr><td><a href="/docs/it/v2.4.x/contextual_retrieval_with_milvus.md">Recupero contestuale con Milvus</a></td><td>Avvio rapido</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/hdbscan_clustering_with_milvus.md">Raggruppamento HDBSCAN con Milvus</a></td><td>Avvio rapido</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/use_ColPali_with_milvus.md">Utilizzare ColPali per il recupero multimodale con Milvus</a></td><td>Avvio rapido</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/vector_visualization.md">Visualizzazione vettoriale</a></td><td>Avvio rapido</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/movie_recommendation_with_milvus.md">Raccomandazione di film con Milvus</a></td><td>Sistema di raccomandazione</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/funnel_search_with_matryoshka.md">Ricerca a imbuto con Matryoshka Embeddings</a></td><td>Avvio rapido</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/question_answering_system.md">Sistema di risposta alle domande</a></td><td>Risposta alle domande</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/recommendation_system.md">Sistema di raccomandazione</a></td><td>Sistema di raccomandazione</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/video_similarity_search.md">Ricerca per similarità video</a></td><td>Ricerca semantica</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/audio_similarity_search.md">Ricerca per similarità audio</a></td><td>Ricerca semantica</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/dna_sequence_classification.md">Classificazione del DNA</a></td><td>Classificazione</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/text_search_engine.md">Motore di ricerca testuale</a></td><td>Ricerca semantica</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/text_image_search.md">Ricerca di immagini per testo</a></td><td>Ricerca semantica</td><td>ricerca vettoriale</td></tr>
<tr><td><a href="/docs/it/v2.4.x/image_deduplication_system.md">Deduplicazione delle immagini</a></td><td>Deduplicazione</td><td>ricerca vettoriale</td></tr>
</tbody>
</table>
